[package]
name = "dagan-utils"
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust utilities for Dagans"

[[bin]]
name = "line"
path = "src/line.rs"

[[bin]]
name = "sss"
path = "src/sss.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
